# bsplm

./: .pre-commit-config.yaml  README.md  pyproject.toml
bsplm/: __init__.py  __main__.py  argparse.py
